# NotiFlow

./: Installation.md  KNOWN_ISSUES.md  README.md
app/: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/Backend/: UV.md  iCalBackendNew.py  json_object_format.md  server.py
app/Backend/announcement_feature/: announcement_fetcher.py  announcement_main.py  announcement_parser.py
app/Backend/assignment_feature/: AssignmentFetcher.py
app/Backend/final_exam_feature/: FinalExam.py
app/Backend/tests/: test_FinalExam.py  test_announcement_fetcher.py  test_announcement_main.py  test_announcement_parser.py  test_assignment_fetcher.py  test_iCalBackendNew.py  test_server.py
app/Frontend/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
app/Frontend/public/: manifest.json
app/Frontend/src/: App.css  App.jsx  index.css
app/Frontend/src/components/: Body.jsx  ComponentSelect.jsx  Header.jsx  Main.jsx
app/Frontend/src/components/Pages/: AssignmentPage.jsx  ClasstimePage.jsx  FinalExamPage.jsx  MidtermPage.jsx
app/Frontend/src/components/Pages/elements/: Assignment.jsx  Classtime.jsx  ClasstimeCard.jsx  FinalExam.jsx  Midterm.jsx
app/Frontend/src/components/Pages/elements/styles/: Assignment.css  Classtime.css  (+3 more)
app/Frontend/src/components/Pages/styles/: AssignmentPage.css  ClasstimePage.css  FinalExamPage.css  MidtermPage.css
app/Frontend/src/components/Terms/: GetAPI.jsx  Popup.jsx
app/Frontend/src/components/Terms/styles/: GetAPI.css  Popup.css
app/Frontend/src/components/styles/: Body.css  Header.css  Main.css
